--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browser-env": "^3.3.0",
     "iotex-antenna": "^0.30.4"
   },
   "devDependencies": {
